2003-06-03  Theodore A. Roth  <troth@openavr.org>

	* include/avr/signal.h: Remove carriage returns.

2003-05-19  Eric B. Weddington  <eric@ecentral.com>

	* NEWS: Add note about new pgmspace.h API.

2003-05-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Update gcc and binutils version requirements.
	Add note about direct sfr access being preferred over in/out macros.

2003-05-14  Eric B. Weddington <eric@ecentral.com>

	* include/avr/pgmspace.h: New API.

2003-05-14  Eric B. Weddington <eric@ecentral.com>

	* include/avr/iotn26.h: Update interrupt vector names to match the
	datasheet. [Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-05-12  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-05-09  Eric B. Weddington  <eric@ecentral.com>

	* crt1/gcrt1.S: Change .data initialization under BIG_CODE to properly 
	use elpm for the ATmega103. 
	[Contributed by Geoffrey Wossum <geoffrey@pager.net>]

2003-05-08  Eric B. Weddington  <eric@ecentral.com>

	* doc/TODO: Update, add items.

2003-05-08  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/signal.h: Add EMPTY_INTERRUPT macro.
	[Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-05-05  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/io86r401.h: Update to match datasheet.

2003-04-22  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-04-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: strtod() is now tested.

2003-04-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* avr-libc.spec.in: Rpm in RedHat-9 is stripping avr binaries when it
	has no business doing so. Disable the install post scriptlet to stop
	this behaviour.

2003-04-14  Theodore A. Roth  <troth@openavr.org>

	* include/avr/ioat94k.h: Add comment to signal defs noting official
	ATMEL names.